# sample-ghc-client

./: .gitignore  CHANGELOG.md  README.md  sample-ghc-client.cabal
other/: UserSettings.hs
src/: Main.hs
