cabal-version:      2.4
name:               sample-ghc-client
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Confirm ability to initalize GHC API

license: MIT
author:             Norman Ramsey
maintainer:         nr@cs.tufts.edu

extra-source-files: README.md

executable sample-ghc-client

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules: 

    build-depends:    base >=4.14.2.0,
                      ghc >= 9.3
    hs-source-dirs:   src
    default-language: Haskell2010
